--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
       <version>4.18.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.7.0</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
       <groupId>org.testng</groupId>
@@ -31,6 +38,5 @@
       <version>7.9.0</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 </project>
